k8s/apps/arr-stack/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: arr-stack
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webserver
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
